--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation("com.squareup.okhttp3:okhttp:3.4.1")
+    implementation("com.google.code.gson:gson:2.6.2")
+    implementation 'org.litepal.android:java:3.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
