--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation("com.squareup.okhttp3:okhttp:3.4.1")
